Header Text Arrow

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                     <ul class="aw-navigation">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#aw-about">About</a></li>
+                        <li><a href="#aw-about">About Us</a></li>
                         <li><a href="#aw-gallery">Gallery</a></li>
                         <li><a href="#aw-testimonials">Testimonials</a></li>
                         <li><a href="#aw-contact">Contact</a></li>
@@ -31,6 +31,10 @@
 
             <!-- Header Content -->
             <section class="aw-header-content">
+                <div class="aw-header-text">
+                    <h1>This is a Testemonial!</h1>
+                    <i class="aw-arrow aw-pulsate"></i>
+                </div>
                 <img class="aw-main-banner" src="./img/main-banner.jpg" alt="Main Banner Image" />
             </section>
 
