--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
                     <ul class="aw-navigation">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#aw-about">About Us</a></li>
-                        <li><a href="#aw-gallery">Gallery</a></li>
-                        <li><a href="#aw-testimonials">Testimonials</a></li>
-                        <li><a href="#aw-contact">Contact</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#gallery">Gallery</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -33,7 +33,7 @@
             <section class="aw-header-content">
                 <div class="aw-header-text">
                     <h1>This is a Testemonial!</h1>
-                    <i class="aw-arrow aw-pulsate"></i>
+                    <a href="#about"><i class="aw-arrow aw-pulsate"></i></a>
                 </div>
                 <img class="aw-main-banner" src="./img/main-banner.jpg" alt="Main Banner Image" />
             </section>
@@ -42,6 +42,96 @@
 
         <!-- Main Content -->
         <section>
+
+            <!-- About us -->
+            <section id="about" class="aw-section">
+
+                <div class="aw-container">
+
+                    <h3>About us</h3>
+
+                    <div class="aw-column">
+                        <i class="icon-lab"></i>
+                        <p>Lorem ipsum dolor amet locavore pour-over PBR&B, +1 skateboard copper mug DIY meggings taxidermy. Cornhole paleo VHS pickled. Keytar waistcoat polaroid tilde banjo tacos church-key direct trade +1 prism. Hot chicken tilde fashion axe crucifix whatever craft beer, pour-over cloud bread.</p>
+                    </div>
+
+                    <div class="aw-column">
+                        <i class="icon-trophy"></i>
+                        <p>Lorem ipsum dolor amet locavore pour-over PBR&B, +1 skateboard copper mug DIY meggings taxidermy. Cornhole paleo VHS pickled. Keytar waistcoat polaroid tilde banjo tacos church-key direct trade +1 prism. Hot chicken tilde fashion axe crucifix whatever craft beer, pour-over cloud bread.</p>
+                    </div>
+
+                    <div class="aw-column">
+                        <i class="icon-rocket"></i>
+                        <p>Lorem ipsum dolor amet locavore pour-over PBR&B, +1 skateboard copper mug DIY meggings taxidermy. Cornhole paleo VHS pickled. Keytar waistcoat polaroid tilde banjo tacos church-key direct trade +1 prism. Hot chicken tilde fashion axe crucifix whatever craft beer, pour-over cloud bread.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Gallery -->
+            <section id="gallery" class="aw-section">
+                    <h3>Gallery</h3>
+                    <ul class="aw-gallery">
+                        <li><img src="./img/gallery/gallery-1.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-2.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-3.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-4.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-5.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-6.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-7.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-8.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-9.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-10.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-11.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-12.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-13.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-14.jpg" alt="" /></li>
+                        <li><img src="./img/gallery/gallery-15.jpg" alt="" /></li>
+                    </ul>
+            </section>
+
+            <!-- Testemonials -->
+            <section id="testimonials" class="aw-section">
+                <h3>Testimonials</h3>
+
+                <div class="aw-testimonials-container">
+
+                    <ul>
+                        <li>
+                            <div class="aw-testimonial">
+                                <div class="aw-user-data">
+                                    <img src="./img/users/user-1.jpg" alt="" />
+                                    <span class="aw-user-name">Alice Cooper</span>
+                                </div>
+                                <div class="aw-testimonial-text">
+                                    <p>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="aw-testimonial">
+                                <div class="aw-user-data">
+                                    <img src="./img/users/user-2.jpg" alt="" />
+                                    <span class="aw-user-name">Michael Knight</span>
+                                </div>
+                                <div class="aw-testimonial-text">
+                                    <p>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="aw-testimonial">
+                                <div class="aw-user-data">
+                                    <img src="./img/users/user-3.jpg" alt="" />
+                                    <span class="aw-user-name">Shannon Bransons</span>
+                                </div>
+                                <div class="aw-testimonial-text">
+                                    <p>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
 
         </section>
 
