--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                             </div>
                         </li>
                     </ul>
+                    <i id="aw-testimonials-prev" class="aw-arrow aw-arrow-left"></i>
+                    <i id="aw-testimonials-next" class="aw-arrow aw-arrow-right"></i>
                 </div>
             </section>
 
