Added Scrolling behavior

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <nav>
                 <div class="aw-container aw-space-between aw-align-center">
 
-                    <a class="aw-logo" href="#">Aw!</a>
+                    <a class="aw-logo aw-scroll-link" href="#">Aw!</a>
 
                     <ul class="aw-navigation">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#gallery">Gallery</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a class="aw-scroll-link" href="#">Home</a></li>
+                        <li><a class="aw-scroll-link" href="#about">About Us</a></li>
+                        <li><a class="aw-scroll-link" href="#gallery">Gallery</a></li>
+                        <li><a class="aw-scroll-link" href="#testimonials">Testimonials</a></li>
+                        <li><a class="aw-scroll-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -33,7 +33,7 @@
             <section class="aw-header-content">
                 <div class="aw-header-text">
                     <h1>This is a Testemonial!</h1>
-                    <a href="#about"><i class="aw-arrow aw-pulsate"></i></a>
+                    <i class="aw-scroll-link aw-arrow aw-pulsate" data-href="#about"></i>
                 </div>
                 <img class="aw-main-banner" src="./img/main-banner.jpg" alt="Main Banner Image" />
             </section>
@@ -103,7 +103,7 @@
                                     <span class="aw-user-name">Alice Cooper</span>
                                 </div>
                                 <div class="aw-testimonial-text">
-                                    <p>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</p>
+                                    <span>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</span>
                                 </div>
                             </div>
                         </li>
@@ -114,7 +114,7 @@
                                     <span class="aw-user-name">Michael Knight</span>
                                 </div>
                                 <div class="aw-testimonial-text">
-                                    <p>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</p>
+                                    <span>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</span>
                                 </div>
                             </div>
                         </li>
@@ -125,7 +125,7 @@
                                     <span class="aw-user-name">Shannon Bransons</span>
                                 </div>
                                 <div class="aw-testimonial-text">
-                                    <p>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</p>
+                                    <span>Lorem ipsum dolor amet flannel austin edison bulb williamsburg, cold-pressed chillwave chartreuse vaporware direct trade. Shabby chic quinoa drinking vinegar, knausgaard distillery try-hard vice. Put a bird on it venmo glossier small batch paleo blog portland 90's tumblr. Williamsburg twee pickled kombucha palo santo paleo.</span>
                                 </div>
                             </div>
                         </li>
@@ -137,9 +137,34 @@
 
         </section>
 
+        <!-- Contact -->
+        <section id="contact" class="aw-section">
+            <h3>Contact</h3>
+
+            <form action="" method="">
+                <input type="text" name="name" placeholder="Name" />
+                <input type="text" name="surname" placeholder="Vorname" />
+                <input type="email" name="email" placeholder="E-Mail Adresse" />
+                <textarea placeholder="Deine Nachricht..."></textarea>
+                <input type="submit" value="Absenden" />
+            </form>
+        </section>
+
         <!-- Footer -->
         <footer>
 
+            <div class="aw-container aw-space-between aw-align-center">
+                <a class="aw-logo aw-scroll-link" href="#">Aw!</a>
+
+                <ul class="aw-social-icons">
+                    <li><a href="#"><i class="icon-phone"></i></a></li>
+                    <li><a href="#"><i class="icon-envelop"></i></a></li>
+                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                    <li><a href="#"><i class="icon-xing"></i></a></li>
+                </ul>
+            </div>
+
         </footer>
+    <script src="./js/main.js"></script>
     </body>
 </html>
