Responsive behavior added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a class="aw-scroll-link" href="#testimonials">Testimonials</a></li>
                         <li><a class="aw-scroll-link" href="#contact">Contact</a></li>
                     </ul>
+                    <i class="icon-menu2 aw-nav-toggle"></i>
                 </div>
             </nav>
 
